RESOLVED FIXED 247012
HashMapStylePropertyMap is readonly and shouldn't be subclassing StylePropertyMap
https://bugs.webkit.org/show_bug.cgi?id=247012
Summary HashMapStylePropertyMap is readonly and shouldn't be subclassing StylePropert...
Chris Dumez
Reported 2022-10-25 10:50:52 PDT
HashMapStylePropertyMap is readonly and shouldn't be subclassing StylePropertyMap. Instead, introduce a MainThreadStylePropertyMapReadonly and have both HashMapStylePropertyMap and StylePropertyMap subclass it.
Attachments
Chris Dumez
Comment 1 2022-10-25 10:56:58 PDT
EWS
Comment 2 2022-10-26 07:57:14 PDT
Committed 256012@main (b902c3b0e0c7): <https://commits.webkit.org/256012@main> Reviewed commits have been landed. Closing PR #5765 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-10-26 07:58:18 PDT
Note You need to log in before you can comment on or make changes to this bug.