HashMapStylePropertyMap is readonly and shouldn't be subclassing StylePropertyMap https://bugs.webkit.org/show_bug.cgi?id=247012

Reviewed by Youenn Fablet.

HashMapStylePropertyMap is readonly and shouldn't be subclassing StylePropertyMap.
Instead, introduce a MainThreadStylePropertyMapReadonly and have both
HashMapStylePropertyMap and StylePropertyMap subclass it.

* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/css/typedom/MainThreadStylePropertyMapReadOnly.cpp: Copied from Source/WebCore/css/typedom/StylePropertyMap.cpp.
(WebCore::MainThreadStylePropertyMapReadOnly::documentFromContext):
(WebCore::MainThreadStylePropertyMapReadOnly::get const):
(WebCore::MainThreadStylePropertyMapReadOnly::getAll const):
(WebCore::MainThreadStylePropertyMapReadOnly::has const):
(WebCore::MainThreadStylePropertyMapReadOnly::shorthandPropertyValue const):
* Source/WebCore/css/typedom/MainThreadStylePropertyMapReadOnly.h: Copied from Source/WebCore/css/typedom/StylePropertyMap.h.
* Source/WebCore/css/typedom/StylePropertyMap.cpp:
(WebCore::StylePropertyMap::documentFromContext): Deleted.
(WebCore::StylePropertyMap::shorthandPropertyValue const): Deleted.
(WebCore::StylePropertyMap::get const): Deleted.
(WebCore::StylePropertyMap::getAll const): Deleted.
(WebCore::StylePropertyMap::has const): Deleted.
* Source/WebCore/css/typedom/StylePropertyMap.h:
* Source/WebCore/html/CustomPaintImage.cpp:

Canonical link: https://commits.webkit.org/256012@main